--- a/src/components/pages/Chats/Chat/Chat.module.scss
+++ b/src/components/pages/Chats/Chat/Chat.module.scss
@@ -1,69 +1,60 @@
-.chat{
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px 40px;
-    border-top: 1px solid rgba(122, 122, 122, 0.144) ;
-    border-bottom: 1px solid rgba(122, 122, 122, 0.164) ;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    animation: chat 0.5s forwards;
-    transition: all .2s;
-    &__img{
-        width: 40px;
-        margin-right: 20px;
-        height: 40px;
-        border-radius: 50%;
-    }
-    &:hover{
-       background-color: rgba(139, 139, 139, 0.164);
-    }
+.chat {
+  box-sizing: border-box;
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px 40px;
+  border-top: 1px solid rgba(122, 122, 122, 0.144);
+  border-bottom: 1px solid rgba(122, 122, 122, 0.164);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  animation: chat 0.5s forwards;
+  transition: all 0.2s;
+  &__img {
+    width: 40px;
+    margin-right: 20px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  &:hover {
+    background-color: rgba(139, 139, 139, 0.164);
+  }
 }
 
-.lastMessage{
-    
-    color: rgb(134, 134, 134);
+.lastMessage {
+  color: rgb(134, 134, 134);
 }
-
-
 
 @keyframes chat {
-    0% {
-      opacity: 0;
-      margin-top: 50px;
-    }
-    100% {
-      opacity: 1;
-      margin-top: 0px;
-    }
+  0% {
+    opacity: 0;
+    margin-top: 50px;
   }
-  
-
-
-  @media (max-width:500px) {
-      .chat {
-          background-color: inherit;
-          border-top: 1px solid rgba(122, 122, 122, 0.322) ;
-          border-bottom: 1px solid rgba(122, 122, 122, 0.322) ;
-          border-radius: 0;
-          width: 100%;
-          margin: 0;
-          animation: chatMobile 0.5s forwards;
-          
-      }
-      
+  100% {
+    opacity: 1;
+    margin-top: 0px;
   }
-
-
-  @keyframes chatMobile {
-    0% {
-      opacity: 0;
-      margin-top: 50px;
-    }
-    100% {
-
-      opacity: 1;
-      margin-top: 0px;
-    }
 }
 
+@media (max-width: 500px) {
+  .chat {
+    background-color: inherit;
+    border-top: 1px solid rgba(122, 122, 122, 0.322);
+    border-bottom: 1px solid rgba(122, 122, 122, 0.322);
+    border-radius: 0;
+    width: 100%;
+    margin: 0;
+    animation: chatMobile 0.5s forwards;
+  }
+}
+
+@keyframes chatMobile {
+  0% {
+    opacity: 0;
+    margin-top: 50px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
